<resources>
    <string name="app_name">5gaam</string>
    <string name="app_email">hi.mangpo@gmail.com</string>
    <string name="app_mangpo">©MANGPO</string>
    <string name="app_version">ver 1.3.0</string>

    <string name="title_setting">설정</string>
    <string name="title_alarm_setting">알림 설정</string>
    <string name="title_alarm_time_setting">시간 설정</string>
    <string name="title_pw_resetting">비밀번호 재설정</string>
    <string name="title_notice">공지사항</string>
    <string name="title_terms">이용약관</string>
    <string name="title_ogam_terms">\‘오감\' 이용약관</string>
    <string name="title_opensource_license">오픈소스 라이선스</string>
    <string name="title_leave_app_review">앱 리뷰 남기기</string>
    <string name="title_go_social_media">공식 SNS이동</string>
    <string name="title_inquiry_request">1:1 문의 / 요청</string>
    <string name="title_old_pw">기존 비밀번호</string>
    <string name="title_new_pw">새로운 비밀번호</string>
    <string name="title_reenter_new_pw">새로운 비밀번호 재입력</string>
    <string name="title_terms_of_service">서비스 이용약관</string>
    <string name="title_privacy_policy">개인정보 처리 방침</string>
    <string name="title_pw_resetting_complete">비밀번호 재설정 완료</string>
    <string name="title_timeline">| 타임라인</string>
    <string name="title_by_sense">| 감각별</string>
    <string name="title_by_score">| 점수별</string>
    <string name="title_by_calendar">| 달력별</string>
    <string name="title_record_complete">기록 완료</string>
    <string name="title_slogan1">감각을 통해 취향을 쌓는 즐거움!</string>
    <string name="title_slogan2">당신은 무엇을 감각할 때 행복한가요?</string>
    <string name="title_slogan3">내가 보고 듣고 느끼는 나만의 취향</string>
    <string name="title_slogan4">감각하며 수집하는 일상 속 취향</string>
    <string name="title_slogan5">오감으로 찾는 나만의 취향</string>
    <string name="title_slogan6">지극히 나다운 취향수집함</string>
    <string name="title_sense">감각</string>
    <string name="title_sight">시각</string>
    <string name="title_ear">청각</string>
    <string name="title_smell">후각</string>
    <string name="title_taste">미각</string>
    <string name="title_touch">촉각</string>
    <string name="title_question">모르겠어요</string>
    <string name="title_taste_record_title">으로 감각한\n오늘의 취향 기록,</string>
    <string name="title_taste_record_title_before">이 정해지기 전인\n오늘의 취향 기록,</string>
    <string name="title_latest_order">최신순</string>
    <string name="title_old_fashioned">오래된순</string>
    <string name="title_5_score">5점</string>
    <string name="title_4_score">4점</string>
    <string name="title_3_score">3점</string>
    <string name="title_2_score">2점</string>
    <string name="title_1_score">1점</string>
    <string name="title_sunday">일</string>
    <string name="title_monday">월</string>
    <string name="title_tuesday">화</string>
    <string name="title_wednesday">수</string>
    <string name="title_thursday">목</string>
    <string name="title_friday">금</string>
    <string name="title_saturday">토</string>
    <string name="title_update_complete">수정 완료</string>
    <string name="title_search_result">검색 결과</string>
    <string name="title_password">비밀번호</string>
    <string name="title_login">로그인</string>
    <string name="title_login_fail">로그인 실패</string>
    <string name="title_temporary_pw_issued">임시 비밀번호 발급 완료</string>
    <string name="title_find_email">이메일 찾기</string>
    <string name="title_inquiry_mail">문의</string>
    <string name="title_sign_up">회원가입</string>
    <string name="title_policies">(필수)이용약관, (필수)개인정보처리방침, (선택)마케팅 수신 동의</string>
    <string name="title_check_policies">약관 확인하기</string>
    <string name="title_required_terms_and_conditions">[필수] ‘오감’ 이용약관</string>
    <string name="title_required_privacy_policy">[필수] 개인정보처리방침</string>
    <string name="title_optional_receive_marketing_information">[선택] 마케팅 정보 수신</string>
    <string name="title_privacy_policy_no_blank">개인정보처리방침</string>
    <string name="title_receive_marketing_information">마케팅 정보 수신</string>
    <string name="title_email">이메일</string>
    <string name="title_acquired_badge">획득한 뱃지</string>
    <string name="title_distribution_by_sensory">감각별 분포도</string>
    <string name="title_number_of_records_trend">기록 갯수 추이</string>
    <string name="title_sense_of_the_month">이 달의 감각</string>
    <string name="title_etc">기타</string>
    <string name="title_nickname_update">닉네임 수정</string>
    <string name="title_representative_badge">대표 뱃지 |</string>
    <string name="title_private_policy_terms">개인정보 수집 및 이용약관</string>
    <string name="title_consenting_marketing_information">마케팅 정보 수신동의</string>
    <string name="title_supporters">텀블벅 후원해주신 분들</string>
    <string name="title_funding_to_launch">펀딩부터 출시까지</string>
    <string name="title_thanks_to">Thanks to -</string>
    <string name="title_preview">미리보기</string>
    <string name="title_icon_custom">아이콘 커스텀</string>
    <string name="title_5gaam_character">오감 캐릭터</string>
    <string name="title_emoji">이모지</string>
    <string name="title_only_text">텍스트만</string>
    <string name="title_recent_search">최근검색어</string>
    <string name="title_update_event">업데이트 이벤트</string>

    <string name="action_logout">로그아웃</string>
    <string name="action_withdrawal">계정 탈퇴</string>
    <string name="action_no">아니요</string>
    <string name="action_yes">예</string>
    <string name="action_complete">완료</string>
    <string name="action_cancel">취소</string>
    <string name="action_see_you_again">또 만나요!</string>
    <string name="action_keep_writing">계속 쓰기</string>
    <string name="action_go_locker">보관함 가기</string>
    <string name="action_go_back">뒤로 가기</string>
    <string name="action_update">수정</string>
    <string name="action_share">공유</string>
    <string name="action_delete">삭제</string>
    <string name="action_confirm">확인</string>
    <string name="action_delete_long">삭제하기</string>
    <string name="action_send_mail">메일 전송</string>
    <string name="action_next">다음</string>
    <string name="action_send_code">코드전송</string>
    <string name="action_resend">재전송</string>
    <string name="action_start">시작하기</string>
    <string name="action_all_agree">전체동의</string>
    <string name="action_confirm_complete">확인 완료</string>
    <string name="action_set_representative_badge">대표 뱃지로 설정</string>
    <string name="action_save_image">이미지 저장</string>
    <string name="action_record">기록 쓰러가기</string>
    <string name="action_leave_review">리뷰 남기기</string>
    <string name="action_sharing">공유하기</string>
    <string name="action_share_SNS">SNS 공유</string>
    <string name="action_customizing">커스텀하기</string>
    <string name="action_add_background">+ 배경 추가</string>
    <string name="action_delete_all">전체 삭제</string>
    <string name="action_skip">건너뛰기</string>
    <string name="action_join_now">지금 바로 참여하기</string>
    <string name="action_follow_5gaam">오감 팔로우하기</string>

    <string name="msg_logout">정말 로그아웃 하시겠습니까?</string>
    <string name="msg_really_withdrawal">정말 탈퇴하실 건가요?</string>
    <string name="msg_all_records_lost">그동안의 기록들이 모두 사라져요.</string>
    <string name="msg_pw_conditions">영문, 숫자, 특수문자(!@#$&amp;*) 중 2개 조합 10자 이상</string>
    <string name="msg_when_to_go">언제로 이동할까요?</string>
    <string name="msg_go_to_login">로그인 화면으로 이동합니다.</string>
    <string name="msg_taste_input_complete">취향 입력이 완료되었어요.</string>
    <string name="msg_select_again">다시 선택하시겠습니까?</string>
    <string name="msg_not_save">작성한 글은 저장되지 않아요.</string>
    <string name="msg_taste_record_hint">함께 기억하고 싶은 이야기가 있다면\n기록해주세요. (선택 / 최대 100자)</string>
    <string name="msg_taste_keyword_hint">취향키워드를 입력하세요. (최대 15자)</string>
    <string name="msg_indicate_taste_preference">취향을 얼마나 좋아하는지 표시해주세요!</string>
    <string name="msg_hello">님의 취향,\n어떤 감각으로 기록할까요?</string>
    <string name="msg_how_to_use">어떻게 쓰는지 모르겠다면?</string>
    <string name="msg_enter_search_term">검색어를 입력해 주세요.</string>
    <string name="msg_update_complete">취향 수정이 완료되었어요.</string>
    <string name="msg_really_delete">정말 삭제하시겠어요?</string>
    <string name="msg_cannot_recover">삭제한 취향은 복구할 수 없어요.</string>
    <string name="msg_nice_to_meet_you">만나서 반가워요!</string>
    <string name="msg_enter_email">이메일 주소를 입력해주세요.</string>
    <string name="msg_enter_pw">비밀번호를 입력해주세요.</string>
    <string name="msg_check_email_pw">이메일 / 비밀번호를 확인해주세요.</string>
    <string name="msg_send_temporary_pw">가입하신 이메일로\n임시 비밀번호를 보낼게요!</string>
    <string name="msg_enter_signed_up_email">가입했던 이메일 주소를 입력해주세요.</string>
    <string name="msg_dont_know_email">이메일을 모르겠다면?</string>
    <string name="msg_dont_know_pw">비밀번호를 모르겠다면?</string>
    <string name="msg_reset_pw">비밀번호 재설정 후 사용해주세요!</string>
    <string name="msg_contact_official_email">공식 이메일로 문의주세요!</string>
    <string name="msg_login">이미 가입하셨나요? 로그인하기</string>
    <string name="msg_on_boarding1">당신은 무엇을 감각할 때\n가장 행복한가요?</string>
    <string name="msg_on_boarding2">내가 보고 듣고 느끼는 것이\n곧 나를 이룬다.</string>
    <string name="msg_on_boarding3">사소한 것이라도 괜찮아요.\n하나씩 쌓이면 취향이 됩니다.</string>
    <string name="msg_on_boarding4">오감으로 느낀 당신의 취향을\n지금 수집해보세요.</string>
    <string name="msg_create_account">계정을 생성합니다.</string>
    <string name="msg_keep_records">한 번 가입하면 기기를 변경해도 기록이 유지돼요!</string>
    <string name="msg_enter_actual_email">실제 사용중인 이메일 주소를 입력해주세요.</string>
    <string name="msg_enter_pw_again">다시 한 번 비밀번호를 입력해주세요.</string>
    <string name="msg_agree_subscription_terms">오감 가입 약관에 모두 동의합니다.</string>
    <string name="msg_authenticate_email">이메일을 인증합니다.</string>
    <string name="msg_send_authenticate_code">생성한 계정 이메일로 인증 코드를 보내드릴게요!</string>
    <string name="msg_send_authenticate_code_here">여기로 인증코드를 보낼게요!</string>
    <string name="msg_enter_authentication_code">인증코드를 입력해주세요.</string>
    <string name="msg_how_call">어떻게 불러드릴까요?</string>
    <string name="msg_nickname_can_be_modified">닉네임은 언제든 수정 가능합니다. 편하게 입력해주세요!</string>
    <string name="msg_up_to_8_characters">최대 8자까지 설정 가능합니다.</string>
    <string name="msg_nickname_conditions">한글, 영어, 숫자만 가능합니다.\n특수문자 및 이모지는 사용 불가해요.</string>
    <string name="msg_almost_there">거의 다 왔어요!</string>
    <string name="msg_allow_notifications">꾸준한 취향 기록을 위해 알림을 허용해주세요.</string>
    <string name="msg_still_change_notification">나중에도 [설정 - 알림설정]에서\n알림을 변경할 수 있어요!</string>
    <string name="msg_write_right_now">바로 써볼까요?</string>
    <string name="msg_sign_up_complete">가입이 완료되었어요. 나만의 취향을 감각해보세요!</string>
    <string name="msg_agree_terms_go_next_step">아래 약관에 동의하시고, 다음 단계로 이동하세요!</string>
    <string name="msg_can_analyze_more_10_records">기록 10개 이상부터 분석할 수 있어요.</string>
    <string name="msg_can_find_out_proportion_of_each_sense">각 감각별 갯수와 비율을 알 수 있어요.</string>
    <string name="msg_can_see_senses_most_by_month">월 별로 가장 많이 기록한 감각을 볼 수 있어요.</string>
    <string name="msg_can_see_trend_number_of_keywords">기록한 키워드 개수의 추이를 볼 수 있어요.</string>
    <string name="msg_empty">비어있어요</string>
    <string name="msg_setup_signature_badge">취향을 기록해 대표 뱃지를 설정해보세요!</string>
    <string name="msg_acquisition_conditions_in_advance">획득 조건은 미리 볼 수 있어요.</string>
    <string name="msg_thanks">떡잎부터 알아봐주신 여러분 덕분에\n‘오감’이 세상 밖으로 나올 수 있었습니다!</string>
    <string name="msg_share_your_preferences">취향을 널리 공유해보세요!</string>
    <string name="msg_success_save_image">이미지가 저장되었습니다.</string>
    <string name="msg_no_search">검색 결과가 없습니다!</string>
    <string name="msg_change_icon">취향에 맞게 아이콘을 변경해 보세요.</string>

    <string name="error_check_old_pw">기존 비밀번호를 확인해주세요.</string>
    <string name="error_not_match_pw">비밀번호가 일치하지 않습니다!</string>
    <string name="error_keyword_start_essential">키워드와 별점은 필수입니다!</string>
    <string name="error_email_not_subscribed">가입되지 않은 이메일입니다!</string>
    <string name="error_enter_authentication_code_again">* 인증코드를 다시 입력해주세요.</string>
    <string name="error_contains_unacceptable_characters">* 허용되지 않는 문자가 포함되어있습니다!</string>
    <string name="error_nickname_validation">닉네임은 2자 이상, 8자 이하, 한글, 영어, 숫자만 사용 가능합니다.</string>
</resources>