<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="20dp">

    <RadioButton
        android:id="@+id/by_score_5score_rb"
        android:layout_width="58dp"
        android:layout_height="36dp"
        android:background="@drawable/selector_filter_rb"
        android:button="@null"
        android:checked="true"
        android:gravity="center"
        android:text="@string/title_5_score"
        android:textAppearance="@style/Sub_Head_B_16"
        android:textColor="@color/WH" />

    <RadioButton
        android:id="@+id/by_score_4score_rb"
        android:layout_width="58dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/selector_filter_rb"
        android:button="@null"
        android:gravity="center"
        android:text="@string/title_4_score"
        android:textAppearance="@style/Sub_Head_B_16"
        android:textColor="@color/WH" />

    <RadioButton
        android:id="@+id/by_score_3score_rb"
        android:layout_width="58dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/selector_filter_rb"
        android:button="@null"
        android:gravity="center"
        android:text="@string/title_3_score"
        android:textAppearance="@style/Sub_Head_B_16"
        android:textColor="@color/WH" />

    <RadioButton
        android:id="@+id/by_score_2score_rb"
        android:layout_width="57dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/selector_filter_rb"
        android:button="@null"
        android:gravity="center"
        android:text="@string/title_2_score"
        android:textAppearance="@style/Sub_Head_B_16"
        android:textColor="@color/WH" />

    <RadioButton
        android:id="@+id/by_score_1score_rb"
        android:layout_width="57dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/selector_filter_rb"
        android:button="@null"
        android:gravity="center"
        android:text="@string/title_1_score"
        android:textAppearance="@style/Sub_Head_B_16"
        android:textColor="@color/WH" />

</RadioGroup>