<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/by_sense_hsv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <RadioGroup
        android:id="@+id/by_sense_filter_rg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp">

        <RadioButton
            android:id="@+id/by_sense_filter_sight_rb"
            android:layout_width="57dp"
            android:layout_height="36dp"
            android:background="@drawable/selector_filter_rb"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/title_sight"
            android:textAppearance="@style/Sub_Head_B_16"
            android:textColor="@color/WH" />

        <RadioButton
            android:id="@+id/by_sense_filter_ear_rb"
            android:layout_width="57dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/selector_filter_rb"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_ear"
            android:textAppearance="@style/Sub_Head_B_16"
            android:textColor="@color/WH" />

        <RadioButton
            android:id="@+id/by_sense_filter_smell_rb"
            android:layout_width="57dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/selector_filter_rb"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_smell"
            android:textAppearance="@style/Sub_Head_B_16"
            android:textColor="@color/WH" />

        <RadioButton
            android:id="@+id/by_sense_filter_taste_rb"
            android:layout_width="57dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/selector_filter_rb"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_taste"
            android:textAppearance="@style/Sub_Head_B_16"
            android:textColor="@color/WH" />

        <RadioButton
            android:id="@+id/by_sense_filter_touch_rb"
            android:layout_width="57dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/selector_filter_rb"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_touch"
            android:textAppearance="@style/Sub_Head_B_16"
            android:textColor="@color/WH" />

        <RadioButton
            android:id="@+id/by_sense_filter_question_rb"
            android:layout_width="98dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/selector_filter_rb"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_question"
            android:textAppearance="@style/Sub_Head_B_16"
            android:textColor="@color/WH" />

    </RadioGroup>

</HorizontalScrollView>