<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/calendar_header_left_arrow_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:src="@drawable/ic_left_arrow_gy04_44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calendar_header_year_month_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:textAppearance="@style/Sub_Head_B_18"
        android:textColor="@color/GY_04"
        app:layout_constraintBottom_toBottomOf="@+id/calendar_header_left_arrow_iv"
        app:layout_constraintStart_toEndOf="@+id/calendar_header_left_arrow_iv"
        app:layout_constraintTop_toTopOf="@+id/calendar_header_left_arrow_iv" />

    <ImageView
        android:id="@+id/calendar_header_right_arrow_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right_arrow_gy04_44"
        app:layout_constraintBottom_toBottomOf="@+id/calendar_header_left_arrow_iv"
        app:layout_constraintStart_toEndOf="@+id/calendar_header_year_month_tv"
        app:layout_constraintTop_toTopOf="@+id/calendar_header_left_arrow_iv" />

    <TextView
        android:id="@+id/calendar_header_sun_tv"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/title_sunday"
        android:textAppearance="@style/Body1_M_14"
        android:textColor="@color/GY_03"
        app:layout_constraintEnd_toStartOf="@+id/calendar_header_mon_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_header_left_arrow_iv" />

    <TextView
        android:id="@+id/calendar_header_mon_tv"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/title_monday"
        android:textAppearance="@style/Body1_M_14"
        android:textColor="@color/GY_03"
        app:layout_constraintEnd_toStartOf="@+id/calendar_header_tue_tv"
        app:layout_constraintStart_toEndOf="@+id/calendar_header_sun_tv"
        app:layout_constraintTop_toBottomOf="@+id/calendar_header_left_arrow_iv" />

    <TextView
        android:id="@+id/calendar_header_tue_tv"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/title_tuesday"
        android:textAppearance="@style/Body1_M_14"
        android:textColor="@color/GY_03"
        app:layout_constraintEnd_toStartOf="@+id/calendar_header_wed_tv"
        app:layout_constraintStart_toEndOf="@+id/calendar_header_mon_tv"
        app:layout_constraintTop_toBottomOf="@+id/calendar_header_left_arrow_iv" />

    <TextView
        android:id="@+id/calendar_header_wed_tv"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/title_wednesday"
        android:textAppearance="@style/Body1_M_14"
        android:textColor="@color/GY_03"
        app:layout_constraintEnd_toStartOf="@+id/calendar_header_thu_tv"
        app:layout_constraintStart_toEndOf="@+id/calendar_header_tue_tv"
        app:layout_constraintTop_toBottomOf="@+id/calendar_header_left_arrow_iv" />

    <TextView
        android:id="@+id/calendar_header_thu_tv"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/title_thursday"
        android:textAppearance="@style/Body1_M_14"
        android:textColor="@color/GY_03"
        app:layout_constraintEnd_toStartOf="@+id/calendar_header_fri_tv"
        app:layout_constraintStart_toEndOf="@+id/calendar_header_wed_tv"
        app:layout_constraintTop_toBottomOf="@+id/calendar_header_left_arrow_iv" />

    <TextView
        android:id="@+id/calendar_header_fri_tv"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/title_friday"
        android:textAppearance="@style/Body1_M_14"
        android:textColor="@color/GY_03"
        app:layout_constraintEnd_toStartOf="@+id/calendar_header_sat_tv"
        app:layout_constraintStart_toEndOf="@+id/calendar_header_thu_tv"
        app:layout_constraintTop_toBottomOf="@+id/calendar_header_left_arrow_iv" />

    <TextView
        android:id="@+id/calendar_header_sat_tv"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="14dp"
        android:gravity="center"
        android:text="@string/title_saturday"
        android:textAppearance="@style/Body1_M_14"
        android:textColor="@color/GY_03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calendar_header_fri_tv"
        app:layout_constraintTop_toBottomOf="@+id/calendar_header_left_arrow_iv" />

</androidx.constraintlayout.widget.ConstraintLayout>