<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_gy01_12"
    tools:context=".view.LogoutDialogFragment">

    <TextView
        android:id="@+id/logout_logout_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/action_logout"
        android:textAppearance="@style/Head_B_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logout_logout_msg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/msg_logout"
        android:textAppearance="@style/Body1_M_16"
        android:textColor="@color/GY_04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_logout_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_no_btn"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/bg_gy03_22p5"
        android:stateListAnimator="@null"
        android:text="@string/action_no"
        android:textAppearance="@style/Sub_Head_B_18"
        android:textColor="@color/WH"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logout_yes_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_logout_msg_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_yes_btn"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/bg_gy04_22p5"
        android:stateListAnimator="@null"
        android:text="@string/action_yes"
        android:textAppearance="@style/Sub_Head_B_18"
        android:textColor="@color/WH"
        app:layout_constraintBottom_toBottomOf="@+id/logout_no_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logout_no_btn"
        app:layout_constraintTop_toTopOf="@+id/logout_no_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>