<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/WH"
    tools:context=".view.SelectAgainDialogFragment">

    <TextView
        android:id="@+id/select_again_msg_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/msg_select_again"
        android:textAppearance="@style/Head_B_20"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_again_not_save_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/msg_not_save"
        android:textAppearance="@style/Body1_M_16"
        android:textColor="@color/GY_04"
        app:layout_constraintTop_toBottomOf="@+id/select_again_msg_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_again_keep_writing_btn"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/bg_gy03_22p5"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/action_keep_writing"
        android:textAppearance="@style/Sub_Head_B_16"
        android:textColor="@color/WH"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/select_again_go_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_again_not_save_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_again_go_back_btn"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_gy04_22p5"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/action_go_back"
        android:textAppearance="@style/Sub_Head_B_16"
        android:textColor="@color/WH"
        app:layout_constraintBottom_toBottomOf="@+id/select_again_keep_writing_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/select_again_keep_writing_btn"
        app:layout_constraintTop_toTopOf="@+id/select_again_keep_writing_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>